Bug 78887 - FILESAVE: <w:br> tag is not being preserved after exported from LO
Summary: FILESAVE: <w:br> tag is not being preserved after exported from LO
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha0+ Master
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: BSA target:4.3.0
Keywords: regression
: 79818 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-05-19 07:08 UTC by Ravindra Vidhate
Modified: 2014-06-10 16:30 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Original File (109.73 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-05-19 07:08 UTC, Ravindra Vidhate
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ravindra Vidhate 2014-05-19 07:08:29 UTC
Created attachment 99301 [details]
Original File

Problem description: 
Open the docx file containing the line break <br>. After exporting it the line break is not present.

Steps to reproduce:
1. Open the DOCX file in LO.
2. Export the file to DOCX format.
3. Open the docx file in MS-Office

Current behavior:
The <w:br> tags are not being preserved after export.

Expected behavior:
The <w:br> tags should be preserved after export.
              
Operating System: Ubuntu
Version: 4.3.0.0.alpha0+ Master
Comment 1 Jorendc 2014-05-20 17:35:38 UTC
Repro, Version: 4.3.0.0.alpha1+
Build ID: cd11bc699ac50af4f560ed5f2e5e7903de0898b8
TinderBox: Win-x86@51-TDF, Branch:MASTER, Time: 2014-05-20_08:02:54
Comment 2 Commit Notification 2014-05-22 08:19:57 UTC
Ravindra Vidhate committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8555c24e069dc00071eaad23c711f1d1375e5afc

fdo#78887 <w:br> tag is not being preserved after export.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 Michael Stahl (allotropia) 2014-06-10 16:22:30 UTC
*** Bug 79818 has been marked as a duplicate of this bug. ***
Comment 4 Michael Stahl (allotropia) 2014-06-10 16:25:04 UTC
this was actually a regression and affected the libreoffice-4-3
branch too, but the fix was only pushed to master.
Comment 5 Commit Notification 2014-06-10 16:30:59 UTC
Ravindra Vidhate committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=637a96d1e7875043c28a93c9a543f33a862497cb&h=libreoffice-4-3

fdo#78887 <w:br> tag is not being preserved after export.


It will be available in LibreOffice 4.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.