fdo#78887 <w:br> tag is not being preserved after export.

When we have <w:br> tag continuous like in the following cases...

    "Title: Superstition\v\vComposer: Stevie Wonder\v\v"
    or "\vLyrics: \v"

    where "\n" is internally replaced by "\v" LO.

    Before text "\v" or after text multiple "\v" is not preserved.

Conflicts:
	sw/qa/extras/ooxmlexport/ooxmlexport.cxx
Reviewed on:
	https://gerrit.libreoffice.org/9420

(cherry picked from commit 8555c24e069dc00071eaad23c711f1d1375e5afc)
Signed-off-by: Michael Stahl <mstahl@redhat.com>

Conflicts:
	sw/qa/extras/ooxmlexport/ooxmlexport.cxx

Change-Id: I2a6d0a7d2382dfbc2f0ab04f150653c9b17bbfd1